Fix how it works section group wrapping issue

--- a/client/src/layout/components/how-it-works.sass
+++ b/client/src/layout/components/how-it-works.sass
@@ -53,6 +53,8 @@
 
 .how-it-works__section-group
   display: flex
+  +media($breakpoint-lg)
+    flex-direction: column
 
 .how-it-works__section
   display: flex
